--- a/estilos.css
+++ b/estilos.css
@@ -34,6 +34,7 @@ header{
     width: 100%;
     height: 100px;
     justify-content:space-between;
+    box-shadow: 0px 1px 7px 7px #e2cfea;
 }
 
 .nav-list{
@@ -41,35 +42,35 @@ header{
     display: flex;
     gap: 1rem;
     padding-right: 4rem;
+    position: relative;
 }
 .nav-list li a{
     text-decoration: none;
 }
 .nav-list button{
-    background-color:#edf2fb;
-    color: #613f75;
+    background-color: #f7a399;
+    color: #edf2fb;
     cursor: pointer;
-    border: none;
+    border:none;
     position: relative;
     border-radius:10px;
     width: 120px;
     height: 30px;
     margin: 1rem;
-    z-index: 50;
+    z-index: 1;
     -webkit-transition: all .3s ease;
     -o-transition:all .3s ease;
     transition: all .3s ease;
+    box-shadow: 10px 7px 15px 1px #6200b3;
 }
 .nav-list button::after{
     position: absolute;
     top: 0px;
     left: 0px;
     content: "  ";
-    background: #333333;
-    background: linear-gradient(to right, #ff0099, #493240);
     width: 100%;
     height: 100%;
-    filter: blur(25px);
+    filter: blur(30px);
     z-index: -1;
 }
 .nav-list button:hover{
@@ -77,6 +78,7 @@ header{
     font-family:'Fuggles', cursive;
     color: #edf2fb;
     transform: scale(1.2,1.2);
+    box-shadow: 10px 5px 15px 5px #6200b3;
 }
 .redes-sociales{
     display: none;
@@ -126,6 +128,9 @@ header{
     .nav-list button::after{
         display: none;
     }
+    .nav-list button{
+        box-shadow: 10px 10px 8px 5px #8187dc;
+    }
     .redes-sociales{
     display: flex;
     justify-content: center;
@@ -133,10 +138,10 @@ header{
     -webkit-transition: all .10s ease;
     -o-transition:all .3s ease;
     transition: all .10s ease;
+    box-shadow: 10px 10px 8px 5px #8187dc;
 }
 .redes-sociales img:hover{
     cursor: pointer;
-    box-shadow: 0 0 20px rgba(255, 255,255,.5);
     }
 }
 
@@ -148,19 +153,29 @@ header{
     place-content: center;
     padding-top:100px;
     font-size: 35px;
-    
+    text-shadow: 0px 10px 15px  #111;
 }
 #title h1{
 font-family: 'Mooli', sans-serif;
 color:#1c2541;
 }
 .sub-title{
-    display: grid;
-    place-content: center;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding-top:20px;
     font-size: 20px;
     font-family: 'Mooli', sans-serif;
     color:#1c2541;
+    text-shadow: 0px 10px 15px  #111;
+    font-family: 'Mooli', sans-serif;
+}
+.sub-title .Ofrecemos{
+    display:flex;
+    width: 100%;
+    padding-top: 50px;
+    padding-left: 40px;
 }
 .gif-A1{
     display: flex;
@@ -168,3 +183,110 @@ color:#1c2541;
     align-items: center;
     padding-top:2rem ;
 }
+#Servicios{
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2rem ;
+    gap: 20px;
+    padding: 20px;
+}
+.grid-padre{
+    display: grid;
+    grid-template-columns:1fr 1fr;
+    gap: 1rem 5rem;
+    margin-top: 13rem;
+}
+.grid-padre img{
+    border-radius: 50%;
+    box-shadow: -1px 10px 10px 1px #d2b7e5;
+}
+.grid-padre h6{
+    text-align: center;
+    padding-top:1rem ;
+    font-size: 15px;
+}
+@media screen and (max-width:550px) {
+    .grid-padre{
+        gap: 3rem;
+        margin-top: 8rem;
+    }
+    .grid-padre img{
+        width: 150px;
+    }
+    
+}
+@media screen and (min-width:551px) {
+    .grid-padre{
+        gap: 10rem;
+        margin-top: 9rem;
+    }
+    .grid-padre img{
+        width: 200px;
+    }
+    
+}
+footer #datos{
+    display: flex;
+    flex-direction:row;
+    justify-content: start;
+    align-items:center;
+    margin-top:20% ;
+    padding-left:15%;
+    background-color:#ada7ff;
+    width: 100%;
+    height: auto;
+    position: absolute;
+}
+.datos{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr;
+    column-gap: 10rem;
+    position: relative;
+}
+#datos a{
+    text-decoration: none;
+}
+#datos h6{
+    font-family: 'Nanum Myeongjo', serif;
+    font-size: 20px;
+    padding-top: 1rem;
+    color: #fff;
+}
+#datos h6:hover{
+    box-shadow: 12px 10px 10px 1px #d2b7e5;
+    color: #fff;
+    border-radius: 10px;
+    cursor:pointer;
+    font-family:'Fuggles', cursive;
+}
+#datos p {
+    text-align: start;
+    padding-top: 1rem ;
+    font-family: 'Nanum Myeongjo', serif;
+    color: #fff;
+}
+#datos p:hover{
+    box-shadow: 12px 10px 10px 1px #d2b7e5;
+    color: #fff;
+    border-radius: 10px;
+    cursor:pointer;
+    transition: all .20s ease;
+    gap:2rem;
+    font-family:'Fuggles', cursive;
+}
+@media screen and (max-width:550px) {
+    .datos{
+        display: flex;
+        flex-direction: column;
+        justify-content: center; 
+        align-items: center;
+    }
+    #datos p{
+        font-size: 15px;
+        padding-bottom: 1rem;
+    }
+}
+
